--- a/Figure2G_boxplot_spleen.Rmd
+++ b/Figure2G_boxplot_spleen.Rmd
@@ -1,9 +1,30 @@
 
+---
+title: "Boxplots of fold change based on AP1 subfamily"
+author: "Neerja Katiyar"
+date: "`r format(Sys.time(), '%d %B, %Y')`"
+output: workflowr::wflow_html
+editor_options:
+  chunk_output_type: console
+---
+
+### Prepare the environment
+
+```{r setup, include=FALSE}
+require(knitr)
+knitr::opts_chunk$set(echo = TRUE)
+opts_knit$set(root.dir = "/Users/katiyn/Dropbox (JAX)/MouseAging_clean/Mice_aging_NK_resubmission/code/") #set root dir!
+```
+
+```{r libraries, include=TRUE, echo=TRUE}
+
 library(ggplot2)
 library(ggpubr)
 library(rstatix)
+```
 
-#source("../../../../../../../code/color_values.R")
+### Function to convert gene IDs.
+```{r convert_geneID, include=TRUE, echo=TRUE}
 ens2gene <- function(genes){
   genome <- annotables::grcm38
 
@@ -20,10 +41,13 @@ ens2gene <- function(genes){
 
     return(ens.genes)
 }
+```
 
-data_AP1_all <- read.table("../Table_B6_NZO_FC_RNA_AP1_all_genes.txt", sep="\t", header=T, row.names=1)
+### Split data of table into AP1 subfamilies based on genes.
+```{r AP1_subfamily, include=TRUE, echo=TRUE}
+data_AP1_all <- read.table("./data/Table_B6_NZO_FC_RNA_AP1_all_genes.txt", sep="\t", header=T, row.names=1)
 
-data_AP1_family <- data_AP1_all[data_AP1_all$tissue == "PBL",]
+data_AP1_family <- data_AP1_all[data_AP1_all$tissue == "Spleen",]
 
 data_AP1_family_Jun <- data_AP1_family[data_AP1_family$gene == "Jun",]
 data_AP1_family_Junb <- data_AP1_family[data_AP1_family$gene == "Junb",]
@@ -79,9 +103,13 @@ data_AP1_family_Mafk$AP1_subfamily <- c(rep("Maf"))
 
 df_AP1_family_all <- rbind(data_AP1_family_Jun, data_AP1_family_Junb, data_AP1_family_Jund, data_AP1_family_Fos, data_AP1_family_Fosb, data_AP1_family_Atf2, data_AP1_family_Atf3, data_AP1_family_Atf4, data_AP1_family_Atf5, data_AP1_family_Atf6, data_AP1_family_Atf6b, data_AP1_family_Atf7, data_AP1_family_Batf, data_AP1_family_Batf2, data_AP1_family_Batf3, data_AP1_family_Maf, data_AP1_family_Mafa, data_AP1_family_Mafb, data_AP1_family_Maff, data_AP1_family_Mafb, data_AP1_family_Mafg, data_AP1_family_Mafk)
 
-write.table(df_AP1_family_all, "PBL_FC_AP1_all.txt", sep="\t", quote=FALSE)
+write.table(df_AP1_family_all, "./output/Spleen_FC_AP1_all.txt", sep="\t", quote=FALSE)
+```
 
 #########################################################
+### Generate the boxplot to visualize the fold change differences with age for AP1 subfamilies.
+```{r generate_boxplot_AP1_subfamily, include=TRUE, echo=TRUE}
+#One sample t-test
 
 df <- df_AP1_family_all
 
@@ -100,71 +128,21 @@ data_Atf_NZO <- df_NZO[df_NZO$AP1_subfamily == "Atf",]
 data_Maf_B6 <- df_B6[df_B6$AP1_subfamily == "Maf",]
 data_Maf_NZO <- df_NZO[df_NZO$AP1_subfamily == "Maf",]
 
-Jun_B6_test <- t.test(data_Jun_B6$FC, mu=0, alternative = "greater")
-Jun_NZO_test <- t.test(data_Jun_NZO$FC, mu=0, alternative = "greater")
-Fos_B6_test <- t.test(data_Fos_B6$FC, mu=0, alternative = "greater")
-Fos_NZO_test <- t.test(data_Fos_NZO$FC, mu=0, alternative = "greater")
-Atf_B6_test <- t.test(data_Atf_B6$FC, mu=0, alternative = "greater")
-Atf_NZO_test <- t.test(data_Atf_NZO$FC, mu=0, alternative = "greater")
-Maf_B6_test <- t.test(data_Maf_B6$FC, mu=0, alternative = "greater")
-Maf_NZO_test <- t.test(data_Maf_NZO$FC, mu=0, alternative = "greater")
+Jun_B6_test <- t.test(data_Jun_B6$FC, mu=1, alternative = "greater")
+Jun_NZO_test <- t.test(data_Jun_NZO$FC, mu=1, alternative = "greater")
+Fos_B6_test <- t.test(data_Fos_B6$FC, mu=1, alternative = "greater")
+Fos_NZO_test <- t.test(data_Fos_NZO$FC, mu=1, alternative = "greater")
+Atf_B6_test <- t.test(data_Atf_B6$FC, mu=1, alternative = "greater")
+Atf_NZO_test <- t.test(data_Atf_NZO$FC, mu=1, alternative = "greater")
+Maf_B6_test <- t.test(data_Maf_B6$FC, mu=1, alternative = "greater")
+Maf_NZO_test <- t.test(data_Maf_NZO$FC, mu=1, alternative = "greater")
 
 ################################################
 
-print("Jun_B6_test...")
-print(Jun_B6_test)
-print("Jun_NZO_test...")
-print(Jun_NZO_test)
+p <- ggboxplot(df_AP1_family_all, x="AP1_subfamily", y="FC", color = "strain", palette = "jco", add="jitter", facet.by = "tissue", nrow=1, short.panel.labs=FALSE)
 
-print("Fos_B6_test...")
-print(Fos_B6_test)
-print("Fos_NZO_test...")
-print(Fos_NZO_test)
-
-print("Atf_B6_test...")
-print(Atf_B6_test)
-print("Atf_NZO_test...")
-print(Atf_NZO_test)
-
-print("Maf_B6_test...")
-print(Maf_B6_test)
-print("Maf_NZO_test...")
-print(Maf_NZO_test)
-
-#One sample t-test
-
-Jun_B6_wilcox_test <- wilcox.test(data_Jun_B6$FC, mu=0, alternative = "greater")
-Jun_NZO_wilcox_test <- wilcox.test(data_Jun_NZO$FC, mu=0, alternative = "greater")
-Fos_B6_wilcox_test <- wilcox.test(data_Fos_B6$FC, mu=0, alternative = "greater")
-Fos_NZO_wilcox_test <- wilcox.test(data_Fos_NZO$FC, mu=0, alternative = "greater")
-Atf_B6_wilcox_test <- wilcox.test(data_Atf_B6$FC, mu=0, alternative = "greater")
-Atf_NZO_wilcox_test <- wilcox.test(data_Atf_NZO$FC, mu=0, alternative = "greater")
-Maf_B6_wilcox_test <- wilcox.test(data_Maf_B6$FC, mu=0, alternative = "greater")
-Maf_NZO_wilcox_test <- wilcox.test(data_Maf_NZO$FC, mu=0, alternative = "greater")
-
-print("Jun_B6_wilcox_test...")
-print(Jun_B6_wilcox_test)
-print("Jun_NZO_wilcox_test...")
-print(Jun_NZO_wilcox_test)
-
-print("Fos_B6_wilcox_test...")
-print(Fos_B6_wilcox_test)
-print("Fos_NZO_wilcox_test...")
-print(Fos_NZO_wilcox_test)
-
-print("Atf_B6_wilcox_test...")
-print(Atf_B6_wilcox_test)
-print("Atf_NZO_wilcox_test...")
-print(Atf_NZO_wilcox_test)
-
-print("Maf_B6_wilcox_test...")
-print(Maf_B6_wilcox_test)
-print("Maf_NZO_wilcox_test...")
-print(Maf_NZO_wilcox_test)
-
-p <- ggboxplot(df_AP1_family_all, x="AP1_subfamily", y="FC", color = "strain", palette = "jco", add="jitter", facet.by = "tissue", nrow=1, short.panel.labs = FALSE)  
-
-pdf("Boxplot_PBL_FC_RNA_DE_not_filtered_all_24_AP1_genes.pdf", height=10, width=10)
+pdf("./output/Boxplot_Spleen_FC_RNA_DE_not_filtered_all_24_AP1_genes.pdf", height=10, width=10)
 p
 dev.off()
 
+```
